--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Headmosh Zine Lab — Letter Grid (8.5×11)</title>
-  <meta name="description" content="Make an 8‑panel zine on a precise 8.5×11 letter sheet. Locked panel ratio, drag‑and‑drop, copy‑paste images, bold B/W asset library, safe‑area guides, 300‑DPI PNG export, and print‑ready layout.">
+  <title>Headmosh Zine Lab — Minimal 8‑Panel</title>
+  <meta name="description" content="8‑panel zine editor with locked 3:4 panels, paste/drag images, simple image controls, JSON save/load, and workspace PNG export with top row flipped for mini‑zine printing.">
   <style>
     :root{ --ink:#111; --paper:#f7f5f1; --gap:10px; --panel-br:12px; }
     html,body{height:100%}
@@ -23,7 +23,6 @@
     .row{display:flex;gap:8px;flex-wrap:wrap;margin:6px 0}
     .card{border:2px solid #000;background:#fff;border-radius:16px;padding:12px;box-shadow:3px 3px 0 #000;margin:8px 0}
     .tiny{font-size:12px;opacity:.75}
-    label.switch{display:flex;align-items:center;gap:8px;font-size:13px}
 
     /* Workspace */
     main{padding:18px}
@@ -41,42 +40,19 @@
 
     .status{font-size:12px;opacity:.75;margin-left:auto}
 
-    /* Asset library */
-    .assets{display:grid;grid-template-columns:repeat(4,1fr);gap:8px;max-height:180px;overflow:auto;margin-top:8px}
-    .asset{border:2px solid #000;background:#fff;border-radius:10px;box-shadow:2px 2px 0 #000;display:grid;place-items:center;cursor:grab;height:56px}
-    .asset img{max-width:80%;max-height:80%}
-
-    /* LETTER PRINT SHEET (exact size) */
-    #letterWrap{display:flex;justify-content:center}
-    #letterSheet{position:relative;width:8.5in;height:11in;background:#fff;border:2px solid #000;border-radius:10px;box-shadow:0 0 0 1px #0002 inset;display:grid;grid-template-columns:repeat(4,1fr);grid-template-rows:repeat(2,1fr);gap:0.2in;padding:0.35in;box-sizing:border-box}
-    #safeOverlay{position:absolute;inset:0.25in;border:1.5px dashed #0008;border-radius:6px;pointer-events:none;display:none}
-    #letterSheet.show-safe #safeOverlay{display:block}
-    .printPanel{border:2px solid #000;border-radius:10px;overflow:hidden;position:relative}
-    .printPanel .content{position:absolute;inset:0;padding:8px}
-    .printPanel img{max-width:100%;max-height:100%;object-fit:contain;display:block;margin:auto}
-    .bw img{filter:grayscale(100%) contrast(120%)}
-
-    /* Hide guides while exporting */
+    /* Clean export state */
     .exporting .panel .hint{display:none}
     .exporting .panel.selected{outline:none}
 
     /* Subtle paper grain */
     body:before{content:"";position:fixed;inset:0;background:radial-gradient(circle at 10% 10%,#0001 0 1px,transparent 1px) 0 0/6px 6px,radial-gradient(circle at 70% 80%,#0001 0 1px,transparent 1px) 0 0/9px 9px;opacity:.18;pointer-events:none}
-
-    @media print{
-      .app, .toolbar, aside{display:none !important}
-      body{background:#fff}
-      #letterWrap{display:block}
-      @page{size:letter;margin:0}
-      #letterSheet{box-shadow:none;border:0}
-    }
   </style>
 </head>
 <body>
   <div class="app">
     <aside>
-      <h1><span class="brand">HEADMOSH</span> <span class="mono">/ Letter Zine Lab</span></h1>
-      <p class="tiny">Locked 8‑panel grid designed to print cleanly on <strong>8.5×11</strong>. Drag or paste images, add punk B/W assets, then fill the sheet and print or export PNG.</p>
+      <h1><span class="brand">HEADMOSH</span> <span class="mono">/ Minimal Zine Lab</span></h1>
+      <p class="tiny">8 locked panels (3:4). Paste or drag images. Simple image controls. Export workspace PNG with top row flipped for mini‑zine workflows.</p>
 
       <div class="card">
         <strong>Actions</strong>
@@ -85,32 +61,8 @@
           <button class="btn block" id="shuffleBtn">Shuffle panels</button>
         </div>
         <div class="row">
-          <button class="btn block" id="scribbleBtn">Add scribbles</button>
-          <button class="btn block" id="clearScribbleBtn">Clear scribbles</button>
+          <button class="btn block" id="exportPngBtn">Export Workspace PNG (top row flipped)</button>
         </div>
-        <div class="row">
-          <button class="btn" id="exportPngBtn">Export Workspace PNG</button>
-        </div>
-      </div>
-
-      <div class="card">
-        <strong>Letter Sheet</strong>
-        <div class="row">
-          <button class="btn block" id="fillLetterBtn">Fill 8.5×11 sheet from panels</button>
-        </div>
-        <div class="row">
-          <button class="btn" id="exportLetterBtn">Export Letter PNG</button>
-          <button class="btn" id="exportLetter300Btn" title="Exact 300‑DPI (2550×3300)">Export 300‑DPI PNG</button>
-          <button class="btn ghost" id="printBtn">Print</button>
-        </div>
-        <label class="switch"><input type="checkbox" id="bwToggle"> B/W print mode (grayscale + contrast)</label><br>
-        <label class="switch"><input type="checkbox" id="safeToggle"> Show safe area (¼‑inch inset)</label>
-      </div>
-
-      <div class="card">
-        <strong>Asset Library (drag or click)</strong>
-        <div class="assets" id="assetGrid"></div>
-        <div class="row"><button class="btn block" id="randomAssetBtn">Add random B/W object to selected panel</button></div>
       </div>
 
       <div class="card">
@@ -139,8 +91,8 @@
         <ul class="tiny">
           <li>Click a panel to select it (outline shows).</li>
           <li>Paste images with <kbd>Ctrl/Cmd+V</kbd> directly into a panel.</li>
-          <li>Drag assets into panels, or click a tile to insert.</li>
-          <li>Panels are locked to a 3:4 ratio for consistent print composition.</li>
+          <li>Drag image files from your desktop into a panel.</li>
+          <li>Use image controls or shortcuts for quick tweaks.</li>
         </ul>
       </div>
     </aside>
@@ -148,13 +100,6 @@
     <main>
       <div class="toolbar"><div class="status" id="status">Ready.</div></div>
       <section id="workspace" class="grid" aria-label="Editable panels (1–8)"></section>
-
-      <h3 style="margin:18px 0 6px">Letter preview</h3>
-      <div id="letterWrap">
-        <section id="letterSheet" aria-label="8.5×11 Letter layout (4×2 grid)">
-          <div id="safeOverlay" aria-hidden="true"></div>
-        </section>
-      </div>
     </main>
   </div>
 
@@ -172,20 +117,6 @@
       "Cut, paste, repeat one word until it’s music.",
       "Draw Grimbo’s loud thought vs. Zapette’s calm reply.",
       "Permission slip: You are allowed to make something ugly."
-    ];
-
-    const SVG_ASSETS = [
-      () => `<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 200 200'><rect width='100%' height='100%' fill='white'/><path d='M0 120 Q40 60 80 120 T160 120 T240 120' fill='none' stroke='black' stroke-width='18' stroke-linecap='round'/><path d='M110 120 q-10-25 15-45' fill='none' stroke='black' stroke-width='12' stroke-linecap='round'/></svg>`,
-      () => `<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 200 200'><rect width='100%' height='100%' fill='white'/><g stroke='black' stroke-width='16'><circle cx='100' cy='100' r='30' fill='white'/><g><path d='M100 8 V60'/><path d='M100 140 v52'/><path d='M8 100 H60'/><path d='M140 100 h52'/><path d='M30 30 L60 60'/><path d='M170 170 L140 140'/><path d='M30 170 L60 140'/><path d='M170 30 L140 60'/></g></g></svg>`,
-      () => `<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 200 200'><rect width='100%' height='100%' fill='white'/><g fill='black'>${Array.from({length:50},(_,i)=>{const x=(i%10)*20,y=Math.floor(i/10)*20;return (i+x/20+y/20)%2?`<rect x='${x}' y='${y}' width='20' height='20'/>`:''}).join('')}</g></svg>`,
-      () => `<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 200 200'><rect width='100%' height='100%' fill='white'/><g fill='none' stroke='black' stroke-width='18'><circle cx='90' cy='110' r='60'/><circle cx='90' cy='110' r='22'/><path d='M150 110 h40 v40' /></g></svg>`,
-      () => `<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 200 200'><rect width='100%' height='100%' fill='white'/><g fill='none' stroke='black' stroke-width='14' stroke-linecap='round'><circle cx='60' cy='70' r='26'/><circle cx='100' cy='50' r='26'/><path d='M80 110 L180 170'/><path d='M80 110 L180 40'/></g></svg>`,
-      () => `<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 200 200'><rect width='100%' height='100%' fill='white'/><path d='M20 100 H160' stroke='black' stroke-width='20'/><path d='M120 60 L180 100 120 140 Z' fill='black'/></svg>`,
-      () => `<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 200 200'><rect width='100%' height='100%' fill='white'/><path d='M40 120 a60 60 0 1 1 120 0' fill='none' stroke='black' stroke-width='18'/><rect x='30' y='110' width='30' height='60' fill='black'/><rect x='140' y='110' width='30' height='60' fill='black'/></svg>`,
-      () => `<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 200 200'><rect width='100%' height='100%' fill='white'/><path d='M20 40 h140 v80 h-60 l-20 20 v-20 h-60 z' fill='white' stroke='black' stroke-width='16'/></svg>`,
-      () => `<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 220 140'><rect width='100%' height='100%' fill='white'/><rect x='10' y='40' width='180' height='60' rx='6' fill='white' stroke='black' stroke-width='14'/><circle cx='50' cy='110' r='14' fill='black'/><circle cx='150' cy='110' r='14' fill='black'/><rect x='24' y='52' width='36' height='28' fill='black'/><rect x='66' y='52' width='36' height='28' fill='black'/><rect x='108' y='52' width='36' height='28' fill='black'/></svg>`,
-      () => `<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 200 200'><rect width='100%' height='100%' fill='white'/><g fill='none' stroke='black' stroke-width='14' stroke-linecap='round'><path d='M100 180 V100'/><path d='M100 120 q-40 -30 -70 0'/><path d='M100 140 q40 -30 70 0'/><path d='M100 100 q-30 -40 -50 -20'/><path d='M100 100 q30 -40 50 -20'/></g></svg>`,
-      () => `<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 200 200'><defs><pattern id='tri' width='20' height='20' patternUnits='userSpaceOnUse'><path d='M0 20 L10 0 L20 20 Z' fill='black'/></pattern></defs><rect width='100%' height='100%' fill='white'/><rect width='100%' height='100%' fill='url(#tri)'/></svg>`
     ];
 
     const $ = s => document.querySelector(s);
@@ -208,7 +139,6 @@
       p.addEventListener('drop', async (e)=>{
         const file = [...e.dataTransfer.files][0];
         if(file && file.type.startsWith('image/')){ const img = await fileToImg(file); placeImage(p,img); }
-        const url = e.dataTransfer.getData('text/uri-list'); if(url){ const im=new Image(); im.onload=()=>placeImage(p,im); im.src=url; }
       });
 
       p.addEventListener('paste', async (e)=>{ const item = [...e.clipboardData.items].find(i=>i.type.startsWith('image/')); if(item){ e.preventDefault(); const img = await fileToImg(item.getAsFile()); placeImage(p,img); }});
@@ -237,31 +167,9 @@
     function rotateSelected(deg){ if(!selectedImg) return; const cur=parseFloat(selectedImg.dataset.rot||'0'); selectedImg.dataset.rot = (cur+deg).toFixed(1); updateTransform(selectedImg); }
     function deleteSelected(){ if(!selectedImg) return; const parent=selectedImg.parentElement; selectedImg.remove(); selectedImg=null; if(parent) parent.focus(); }
 
-    // Asset grid
-    const grid = document.getElementById('assetGrid');
-    SVG_ASSETS.forEach(make=>{ const url='data:image/svg+xml;utf8,'+encodeURIComponent(make()); const tile=document.createElement('div'); tile.className='asset'; const img=new Image(); img.src=url; img.alt='asset'; tile.appendChild(img); tile.draggable=true; tile.addEventListener('dragstart',e=>{ e.dataTransfer.setData('text/uri-list', url); }); tile.addEventListener('click',()=>{ const target=selectedPanel||panels[Math.floor(Math.random()*panels.length)]; const im=new Image(); im.onload=()=>placeImage(target,im); im.src=url; }); grid.appendChild(tile); });
-
     // Buttons
     $('#promptBtn').addEventListener('click',()=>{ alert('PROMPT: '+prompts[Math.floor(Math.random()*prompts.length)]); });
     $('#shuffleBtn').addEventListener('click',()=>{ const order=[...panels]; order.sort(()=>Math.random()-0.5); order.forEach(p=>workspace.appendChild(p)); setStatus('Shuffled panel order.'); });
-
-    let scribbleLayer; $('#scribbleBtn').addEventListener('click',()=>{ if(scribbleLayer) scribbleLayer.remove(); scribbleLayer=document.createElement('canvas'); scribbleLayer.className='scribble'; document.body.appendChild(scribbleLayer); const ctx=scribbleLayer.getContext('2d'); resizeScribble(); ctx.lineWidth=2; ctx.strokeStyle='#0003'; for(let i=0;i<120;i++){ ctx.beginPath(); ctx.moveTo(Math.random()*scribbleLayer.width,Math.random()*scribbleLayer.height); ctx.bezierCurveTo(Math.random()*scribbleLayer.width,Math.random()*scribbleLayer.height,Math.random()*scribbleLayer.width,Math.random()*scribbleLayer.height,Math.random()*scribbleLayer.width,Math.random()*scribbleLayer.height); ctx.stroke(); } setStatus('Added scribbles (overlay).'); });
-    $('#clearScribbleBtn').addEventListener('click',()=>{ if(scribbleLayer){ scribbleLayer.remove(); scribbleLayer=null; setStatus('Cleared scribbles.'); } });
-    window.addEventListener('resize',()=>scribbleLayer && resizeScribble()); function resizeScribble(){ scribbleLayer.width=innerWidth; scribbleLayer.height=innerHeight; }
-
-    // Letter sheet logic
-    const letter = $('#letterSheet');
-    function fillLetter(){ letter.innerHTML='<div id="safeOverlay" aria-hidden="true"></div>'; for(let i=0;i<8;i++){ const cell=document.createElement('div'); cell.className='printPanel'; const c=document.createElement('div'); c.className='content'; c.innerHTML = panels[i].querySelector('.content').innerHTML; cell.appendChild(c); letter.appendChild(cell); } setStatus('Filled 8.5×11 sheet from panels.'); }
-    $('#fillLetterBtn').addEventListener('click', fillLetter);
-
-    // Toggles
-    $('#bwToggle').addEventListener('change', (e)=>{ letter.classList.toggle('bw', e.target.checked); });
-    $('#safeToggle').addEventListener('change', (e)=>{ letter.classList.toggle('show-safe', e.target.checked); });
-
-    // Exports
-    $('#exportLetterBtn').addEventListener('click', async ()=>{ if(!letter.children.length) fillLetter(); setStatus('Rendering letter PNG…'); const canvas = await html2canvas(letter, {backgroundColor:'#ffffff', scale:2}); const a=document.createElement('a'); a.download='headmosh-letter-8x11.png'; a.href=canvas.toDataURL('image/png'); a.click(); setStatus('Letter PNG exported.'); });
-    $('#exportLetter300Btn').addEventListener('click', async ()=>{ if(!letter.children.length) fillLetter(); setStatus('Rendering 300‑DPI PNG…'); const SCALE_300 = 300/96; const canvas = await html2canvas(letter, {backgroundColor:'#ffffff', scale:SCALE_300}); const a=document.createElement('a'); a.download='headmosh-letter-300dpi.png'; a.href=canvas.toDataURL('image/png'); a.click(); setStatus('300‑DPI PNG exported.'); });
-    $('#printBtn').addEventListener('click', ()=>{ if(!letter.children.length) fillLetter(); window.print(); });
 
     // Export workspace with top row flipped 180° (for mini‑zine fold workflows)
     $('#exportPngBtn').addEventListener('click', async ()=>{
@@ -279,7 +187,7 @@
     });
 
     // Project save/load
-    $('#saveBtn').addEventListener('click',()=>{ const data = panels.map(p=>({ html:p.querySelector('.content').innerHTML })); const blob=new Blob([JSON.stringify({v:1,p:data},null,2)],{type:'application/json'}); const url=URL.createObjectURL(blob); const a=Object.assign(document.createElement('a'),{href:url,download:'headmosh-letter-zine.json'}); a.click(); URL.revokeObjectURL(url); });
+    $('#saveBtn').addEventListener('click',()=>{ const data = panels.map(p=>({ html:p.querySelector('.content').innerHTML })); const blob=new Blob([JSON.stringify({v:1,p:data},null,2)],{type:'application/json'}); const url=URL.createObjectURL(blob); const a=Object.assign(document.createElement('a'),{href:url,download:'headmosh-minimal-zine.json'}); a.click(); URL.revokeObjectURL(url); });
     $('#loadFile').addEventListener('change', async (e)=>{ const file=e.target.files[0]; if(!file) return; const text=await file.text(); const data=JSON.parse(text); data.p.forEach((pd,i)=>{ const p=panels[i]; p.querySelector('.content').innerHTML=pd.html; }); setStatus('Project loaded.'); });
 
     // Selected image controls
@@ -298,8 +206,9 @@
       if(e.key === 'Delete' || e.key === 'Backspace'){ if(selectedImg){ e.preventDefault(); deleteSelected(); } }
     });
 
-    setStatus('Ready. Build the 8 panels, then Fill 8.5×11 sheet → Export 300‑DPI PNG or Print.');
+    setStatus('Ready. Build your 8 panels, then Export Workspace PNG (top row flipped).');
   });
   </script>
 </body>
 </html>
+
