--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     main{padding:18px}
     .toolbar{display:flex;flex-wrap:wrap;gap:8px;margin:4px 0 12px}
     .grid{display:grid;grid-template-columns:repeat(4,1fr);gap:var(--gap)}
-    .panel{position:relative;border:2px solid #000;background:#fff;border-radius:var(--panel-br);box-shadow:3px 3px 0 #000;overflow:hidden;aspect-ratio:3/4;transform-origin:center center}
+    .panel{position:relative;border:1px solid #999;background:#fff;border-radius:var(--panel-br);box-shadow:1px 1px 0 #bbb;overflow:hidden;aspect-ratio:3/4;transform-origin:center center}
     .panel .hint{position:absolute;inset:8px auto auto 8px;font-size:11px;opacity:.5;background:#fff;padding:2px 6px;border-radius:100px;border:1px dashed #000}
     .panel .content{position:absolute;inset:0;padding:10px;white-space:pre-wrap}
     .panel img{max-width:100%;max-height:100%;object-fit:contain;display:block;margin:auto;transition:transform .1s}
